--- a/LiverpoolTest/Info.plist
+++ b/LiverpoolTest/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>21</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -41,5 +41,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>zbranch</key>
+	<string>On branch master</string>
+	<key>zcommit</key>
+	<string>a21e0e0 Feat: CoreData y búsquedas</string>
 </dict>
 </plist>
