--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: test File
-      run: git status >> newbranch.txt
+      run: echo git status
