--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: macos-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: peter-evans/create-pull-request@v3
     - name: createPull
       with:
           token: ${{ secrets.GITHUB_TOKEN }}
