--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -5,8 +5,10 @@ on:
     - cron: '10 * * * *'
 
 jobs:
-  runs-on: macos-latest
-  steps:
+  createPullRequest:
+   
+    runs-on: ubuntu-latest
+    steps:
     - uses: actions/checkout@v2
     - name: Make changes to pull request
       run: date +%s > report.txt
