--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -12,8 +12,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Make changes to pull request
       run: date +%s > report.txt
-           git config user.name 'Peter Evans'
-           git config user.email 'peter-evans@users.noreply.github.com'
+           git config user.name 'AoSc920411'
+           git config user.email 'AoSc920411@users.noreply.github.com'
     - name: Create Pull Request
       id: cpr
       uses: peter-evans/create-pull-request@v3
