--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,3 +27,4 @@ jobs:
         pr_assignee: 'AoSc920411'
         # GitHub token secret
         github_token: '29259c8c597fe1b929d842d26e88d93bb5e3bc75'
+        run: echo git config --global user.name
