--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,5 +26,5 @@ jobs:
         pr_reviewer: 'AoSc920411'
         pr_assignee: 'AoSc920411'
         # GitHub token secret
-        github_token: '29259c8c597fe1b929d842d26e88d93bb5e3bc75'
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         run: echo git config --global user.name
