--- a/.github/workflows/SwiftTest.yml
+++ b/.github/workflows/SwiftTest.yml
@@ -2,9 +2,7 @@ name: SwiftTest
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    branches: [ * ]
 
 jobs:
   build:
