--- a/LiverpoolTest.xcworkspace/xcshareddata/xcschemes/LiverpoolTest.xcscheme
+++ b/LiverpoolTest.xcworkspace/xcshareddata/xcschemes/LiverpoolTest.xcscheme
@@ -28,6 +28,16 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "E769045925228C9100A28C8B"
+               BuildableName = "LiverpoolTestTests.xctest"
+               BlueprintName = "LiverpoolTestTests"
+               ReferencedContainer = "container:LiverpoolTest.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
