--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -12,3 +12,6 @@ jobs:
     - uses: actions/checkout@v2
     - name: test File
       run: git status | head -n1 >> infoBranch.txt; git add .; git commit -m 'InfoGit';
+           git add .
+           git commit -m 'Agregar info del repo ---> Workflow'
+           git push
